--- a/HalloDoc Project/Views/Admin/CreateRequestAdminDashboard.cshtml
+++ b/HalloDoc Project/Views/Admin/CreateRequestAdminDashboard.cshtml
@@ -6,7 +6,7 @@
     <div class="mx-auto pt-3 mb-3 container-sm" id="secondDiv">
         <div class="backbtn d-flex justify-content-between px-3">
             <h4 class="text-body my-auto">Submit Information</h4>
-            <a asp-action="MainPage"
+            <a onclick="history.back()"
                class="p-2 border text-decoration-none border-info rounded bg-transparent">
                 <svg xmlns="http://www.w3.org/2000/svg"
                      width="16"
