--- a/HalloDoc Project/Views/Admin/PendingTable.cshtml
+++ b/HalloDoc Project/Views/Admin/PendingTable.cshtml
@@ -193,6 +193,20 @@
 
         </tbody>
     </table>
+    <nav aria-label="Page navigation example">
+        <ul class="pagination">
+            @if (Model.currentPage > 1)
+            {
+                <li class="page-item"><button type="button" onclick="loadPreviousPage(@Model.currentPage)" id="" class="page-link" href="#">Previous</button></li>
+            }
+            <li class="page-item"><span class="page-link" href="#">@Model.currentPage</span></li>
+            @if (Model.currentPage != (int)Math.Ceiling((double)Model.pending / 5))
+            {
+                <li class="page-item"><button type="button" onclick="loadNextPage(@Model.currentPage)" class="page-link" id="">Next</button></li>
+
+            }
+        </ul>
+    </nav>
     @* ---------------------------------------------------------------------------- *@
     @* accordion *@
     <div class="shadow-lg d-md-none d-block">
@@ -307,7 +321,7 @@
                         <div class="row gy-2  py-3">
                             <div class="col-6 px-3">
                                 <a class="border-1 btn-danger px-3 rounded-5 btn w-100"
-                                        asp-controller="Admin" asp-action="ViewUploads" asp-route-requestid="@Model.adminRequests[i].requestid">
+                                   asp-controller="Admin" asp-action="ViewUploads" asp-route-requestid="@Model.adminRequests[i].requestid">
                                     View Uploads
                                 </a>
                             </div>
@@ -349,7 +363,7 @@
                     </div>
                 </div>
             </div>
-            
+
         }
     </div>
 </div>
