--- a/HalloDoc Project/Views/Guest/Friend_family.cshtml
+++ b/HalloDoc Project/Views/Guest/Friend_family.cshtml
@@ -59,6 +59,14 @@
             float: right;
         }
 
+        .PatientInputs:focus {
+            box-shadow: none !important;
+            border: 2px solid #10bce9 !important;
+        }
+
+        .PatientInputs:focus-within + label {
+            color: #10bce9 !important;
+        }
         #filename {
             padding: 0.5em;
             /* / width:93%; / */
@@ -113,77 +121,73 @@
             </button>
         </div>
     </div>
-    <br>
-
     <div class="row mb-4 d-flex justify-content-center">
-        <div class="col-11 col-md-10 col-lg-9 shadow-lg">
+        <div class="col-11 col-sm-10 col-md-9 col-lg-8 shadow-lg">
             <form method="post">
                 <div class="row mt-4">
                     <h5>Friend / Family Information</h5>
                 </div>
                 <div class="row">
-                    <div class="col-11 col-sm-6 mt-4">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating">
-                            <input type="text" asp-for="firstName" class="t form-control" id="YourFname" placeholder="Your First Name ">
+                            <input type="text" asp-for="firstName" class="PatientInputs form-control" id="YourFname" placeholder="Your First Name ">
                             <label for="YourFname">Your First Name</label>
                         </div>
 
                     </div>
-                    <div class="col-11 col-sm-6 mt-4">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating">
-                            <input type="text" asp-for="lastName" class="t  form-control" id="YourLName" placeholder="Your Last Name">
+                            <input type="text" asp-for="lastName" class="PatientInputs form-control" id="YourLName" placeholder="Your Last Name">
                             <label for="YourLName">Your Last Name</label>
                         </div>
                     </div>
                 </div>
 
-                <div class="row ">
-                    <div class="col-11 col-sm-6 mt-4">
-
+                <div class="row">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating ">
-                            <input id="famfrnd-phone" asp-for="phone" class="form-control" type="tel" name="phone1"></input>
+                            <input id="famfrnd-phone" asp-for="phone" class="PatientInputs form-control" type="tel" name="phone1"></input>
                         </div>
-
                     </div>
-                    <div class="col-11 col-sm-6 mt-4">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating">
-                            <input type="email" asp-for="email" class="t  form-control" id="email" placeholder="Your Email">
+                            <input type="email" asp-for="email" class="PatientInputs form-control" id="email" placeholder="Your Email">
                             <label for="email">Your Email</label>
                         </div>
                     </div>
                 </div>
-                <div class="row ">
-                    <div class="col-11 col-sm-6 mt-4">
+                <div class="row">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating">
-                            <input type="text" asp-for="relation" class="t  form-control" id="relation" placeholder="Room">
+                            <input type="text" asp-for="relation" class="PatientInputs form-control" id="relation" placeholder="Room">
                             <label for="relation">Relation With Patient</label>
                         </div>
                     </div>
                 </div>
-                <div class="row ">
+                <div class="row">
                     <h5 for="" class="mt-4">Patient Information</h5>
                 </div>
                 <div class="row mt-4">
-                    <div class="col form-floating ">
-                        <textarea name="" asp-for="PatientModel.Symptoms" class="t form-control" id="forfloatingtextarea"
+                    <div class="col-12 form-floating ">
+                        <textarea name="" asp-for="PatientModel.Symptoms" class="PatientInputs form-control" id="forfloatingtextarea"
                                   placeholder="Enter Brief Details Of Symptoms (Optional)" style="height: 15vh;" cols="20"
                                   rows="5"></textarea>
                         <label for="forfloatingtextarea" class="ms-2">Enter Brief Details Of Symptoms (Optional)</label>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-11 mt-4 col-sm-6 form-floating ">
-                        <input type="text" asp-for="PatientModel.FirstName" placeholder="First Name" class="t  form-control" id="fname">
+                    <div class="col-12 col-sm-6 mt-4 form-floating ">
+                        <input type="text" asp-for="PatientModel.FirstName" placeholder="First Name" class="PatientInputs form-control" id="fname">
                         <label for="fname" class="ms-2">First Name</label>
                     </div>
-                    <div class="col-11 col-sm-6 mt-4 form-floating  ">
-                        <input type="text" asp-for="PatientModel.LastName" placeholder="Last Name" class="t form-control" id="lname">
+                    <div class="col-12 col-sm-6 mt-4 form-floating  ">
+                        <input type="text" asp-for="PatientModel.LastName" placeholder="Last Name" class="PatientInputs form-control" id="lname">
                         <label for="lname" class="ms-2">Last Name</label>
                     </div>
                 </div>
                 <div class="row ">
-                    <div class="col-11 col-sm-6  mt-4 form-floating">
-                        <input type="date" asp-for="PatientModel.DateOfBirth" placeholder="Date Of Birth" class="t form-control" id="DOB">
+                    <div class="col-12 col-sm-6  mt-4 form-floating">
+                        <input type="date" asp-for="PatientModel.DateOfBirth" placeholder="Date Of Birth" class="PatientInputs form-control" id="DOB">
                         <label for="DOB" class="ms-2">Date Of Birth</label>
                     </div>
                 </div>
@@ -191,16 +195,16 @@
                     <h5 for="">Patient Contact Information</h5>
                 </div>
                 <div class="row ">
-                    <div class="col-11 col-sm-6 mt-4">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating">
-                            <input type="email" asp-for="PatientModel.Email" placeholder="Email" class=" t form-control" id="emailfloat">
+                            <input type="email" asp-for="PatientModel.Email" placeholder="Email" class="PatientInputs form-control" id="emailfloat">
                             <label for="emailfloat">Email</label>
                         </div>
                     </div>
-                    <div class="col-11 col-sm-6 mt-4 ">
+                    <div class="col-12 col-sm-6 mt-4 ">
 
                         <div class="form-floating ">
-                            <input id="patient-phone" asp-for="phone" class="form-control" type="tel" name="phone1"></input>
+                            <input id="patient-phone" asp-for="phone" class="PatientInputs form-control" type="tel" name="phone1"></input>
                         </div>
 
 
@@ -210,39 +214,39 @@
                     <h5>Patient Location</h5>
                 </div>
                 <div class="row ">
-                    <div class="col-11 col-sm-6 mt-4">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating">
-                            <input asp-for="PatientModel.Email" type="email" class="t form-control" id="floatingEmail" placeholder="Email ">
+                            <input asp-for="PatientModel.Email" type="email" class="PatientInputs form-control" id="floatingEmail" placeholder="Email ">
                             <label for="floatingEmail">Email address</label>
                         </div>
 
                     </div>
-                    <div class="col-11 col-sm-6 mt-4">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating">
-                            <input type="text" asp-for="PatientModel.City" class="t  form-control" id="floatingCity" placeholder="City">
+                            <input type="text" asp-for="PatientModel.City" class="PatientInputs form-control" id="floatingCity" placeholder="City">
                             <label for="floatingCity">City</label>
                         </div>
                     </div>
                 </div>
 
                 <div class="row ">
-                    <div class="col-11 col-sm-6 mt-4">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating">
-                            <input type="text" asp-for="PatientModel.State" class="t  form-control" id="floatingState" placeholder="state">
+                            <input type="text" asp-for="PatientModel.State" class="PatientInputs form-control" id="floatingState" placeholder="state">
                             <label for="floatingState">State</label>
                         </div>
                     </div>
-                    <div class="col-11 col-sm-6 mt-4">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating">
-                            <input type="number" asp-for="PatientModel.ZipCode" class="t  form-control" id="floatingZip" placeholder="zip">
+                            <input type="number" asp-for="PatientModel.ZipCode" class="PatientInputs form-control" id="floatingZip" placeholder="zip">
                             <label for="floatingZip">Zip Code</label>
                         </div>
                     </div>
                 </div>
                 <div class="row ">
-                    <div class="col-11 col-sm-6 mt-4">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating">
-                            <input type="text" asp-for="PatientModel.RoomSuite" class="t  form-control" id="floatingRoom" placeholder="Room">
+                            <input type="text" asp-for="PatientModel.RoomSuite" class="PatientInputs form-control" id="floatingRoom" placeholder="Room">
                             <label for="floatingRoom">Room # / Suite (Optional)</label>
                         </div>
                     </div>
@@ -250,20 +254,15 @@
                 <div class="row mt-4">
                     <h5>(Optional) Upload Photo or Document</h5>
                 </div>
-                <div class="row px-3">
-
+                <div class="row ">
                     <div class="mb-3">
-
-                        <input  class="form-control" type="file" id="file_input_id" style="opacity:0;height:0;" multiple>
-
-                        <div class="input-group mb-3">
-                            <input type="text" id='text_input_id' class="form-control" placeholder="Select File"
-                                   style="caret-color: transparent" autocomplete="off">
-
+                        <input class=" col-12 form-control"asp-for="file" type="file" id="file_input_id" multiple style="opacity:0;height:0;">
+                        <div class="input-group">
+                            <input type="text" id="text_input_id" class="py-2 col-12 form-control" placeholder="Select File"
+                                   style="caret-color: transparent" autocomplete="off" />
                             <span class="input-group-text" id="text_input_span_id " style="background-color: #10bce9;">
-                                <label for="file_input_id" class="ms-1 text-white">Upload</label>
+                                <label for="file_input_id" class=" py-2 ms-1 text-white">Upload</label>
                             </span>
-
                         </div>
                     </div>
                 </div>
