--- a/HalloDoc Project/Views/Shared/_formpages.cshtml
+++ b/HalloDoc Project/Views/Shared/_formpages.cshtml
@@ -58,9 +58,9 @@
 
     <div class="justify-content-center bg-dark py-3  ">
     <footer class="foot justify-content-center container-fluid  align-items-center d-flex">
-        <a href="#" class="anchor text-white mt-2">Terms & Conditions </a>
+        <a asp-action="TermsAndConditions" asp-controller="Guest" class="anchor text-white mt-2">Terms & Conditions </a>
         <span class="mx-3 mt-1 text-white">|</span>
-        <a href="##" class="anchor text-white mt-2">Privacy Policy</a>
+        <a asp-action="PrivacyPolicy" asp-controller="Guest" class="anchor text-white mt-2">Privacy Policy</a>
     </footer>
 </div>
         
