--- a/HalloDoc Project/Views/Guest/Concierge_info.cshtml
+++ b/HalloDoc Project/Views/Guest/Concierge_info.cshtml
@@ -52,12 +52,12 @@
             float: left;
         }
 
-        .t:focus {
+        .PatientInputs:focus {
             box-shadow: none;
             border: 2px solid #10bce9;
         }
 
-        .t:focus-within + label {
+        .PatientInputs:focus-within + label {
             color: #10bce9 !important;
         }
 
@@ -102,45 +102,45 @@
     </div>
     <br>
     <div class="row mb-4 d-flex justify-content-center">
-        <div class="col-11 col-md-10 col-lg-9 shadow-lg">
+        <div class="col-11 col-sm-10 col-md-9 col-lg-8 shadow-lg">
             <form method="post">
                 <div class="row mt-4">
                     <h5>Concierge Information</h5>
                 </div>
                 <div class="row">
-                    <div class="col-11 col-sm-6 mt-4">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating">
-                            <input type="text" asp-for="ConFirstName" class="t form-control" id="YourFname" placeholder="Your First Name ">
+                            <input type="text" asp-for="ConFirstName" class="PatientInputs form-control" id="YourFname" placeholder="Your First Name ">
                             <label for="YourFname">Your First Name</label>
                         </div>
 
                     </div>
-                    <div class="col-11 col-sm-6 mt-4">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating">
-                            <input type="text" asp-for="ConLastName" class="t  form-control" id="YourLName" placeholder="Your Last Name">
+                            <input type="text" asp-for="ConLastName" class="PatientInputs form-control" id="YourLName" placeholder="Your Last Name">
                             <label for="YourLName">Your Last Name</label>
                         </div>
                     </div>
                 </div>
 
                 <div class="row ">
-                    <div class="col-11 col-sm-6 mt-4">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating mt-3">
                             <input id="concierge-phone" asp-for="ConPhoneNo" class="form-control" type="tel" name="phone1"></input>
                         </div>
 
                     </div>
-                    <div class="col-11 col-sm-6 mt-4">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating">
-                            <input type="email" asp-for="ConEmail" class="t  form-control" id="email" placeholder="Your Email">
+                            <input type="email" asp-for="ConEmail" class="PatientInputs form-control" id="email" placeholder="Your Email">
                             <label for="email">Your Email</label>
                         </div>
                     </div>
                 </div>
                 <div class="row ">
-                    <div class="col-11 col-sm-6 mt-4">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating">
-                            <input type="text" asp-for="ConPropertyName" class="t  form-control" id="property" placeholder="Room">
+                            <input type="text" asp-for="ConPropertyName" class="PatientInputs form-control" id="property" placeholder="Room">
                             <label for="property">Hotel/Property Name</label>
                         </div>
                     </div>
@@ -150,31 +150,31 @@
                     <h5>Concierge Location</h5>
                 </div>
                 <div class="row ">
-                    <div class="col-11 col-sm-6 mt-4">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating">
-                            <input type="text" asp-for="ConStreet" class="t form-control" id="street" placeholder="Email ">
+                            <input type="text" asp-for="ConStreet" class="PatientInputs form-control" id="street" placeholder="Email ">
                             <label for="street">Street</label>
                         </div>
 
                     </div>
-                    <div class="col-11 col-sm-6 mt-4">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating">
-                            <input type="text" asp-for="ConCity" class="t  form-control" id="floatingCity" placeholder="City">
+                            <input type="text" asp-for="ConCity" class="PatientInputs form-control" id="floatingCity" placeholder="City">
                             <label for="floatingCity">City</label>
                         </div>
                     </div>
                 </div>
 
                 <div class="row ">
-                    <div class="col-11 col-sm-6 mt-4">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating">
-                            <input type="text" asp-for="ConState" class="t  form-control" id="floatingState" placeholder="state">
+                            <input type="text" asp-for="ConState" class="PatientInputs form-control" id="floatingState" placeholder="state">
                             <label for="floatingState">State</label>
                         </div>
                     </div>
-                    <div class="col-11 col-sm-6 mt-4">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating">
-                            <input type="text" asp-for="ConZipCode" class="t  form-control" id="floatingZip" placeholder="zip">
+                            <input type="text" asp-for="ConZipCode" class="PatientInputs form-control" id="floatingZip" placeholder="zip">
                             <label for="floatingZip">Zip Code</label>
                         </div>
                     </div>
@@ -184,25 +184,25 @@
                 </div>
                 <div class="row mt-4">
                     <div class="col form-floating ">
-                        <textarea  asp-for="PtSymptoms" class="t form-control" id="forfloatingtextarea"
+                        <textarea asp-for="PtSymptoms" class="PatientInputs form-control" id="forfloatingtextarea"
                                   placeholder="Enter Brief Details Of Symptoms(Optional)" style="height: 15vh;" cols="20"
                                   rows="5"></textarea>
                         <label for="forfloatingtextarea" class="ms-2">Enter Brief Details Of Symptoms(Optional)</label>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-11 mt-4 col-sm-6 form-floating ">
-                        <input type="text" asp-for="PtFirstName" placeholder="First Name" class="t  form-control" id="fname">
+                    <div class="col-12 col-sm-6 mt-4 form-floating ">
+                        <input type="text" asp-for="PtFirstName" placeholder="First Name" class="PatientInputs form-control" id="fname">
                         <label for="fname" class="ms-2">First Name</label>
                     </div>
-                    <div class="col-11 col-sm-6 mt-4 form-floating  ">
-                        <input type="text" asp-for="PtLastName" placeholder="Last Name" class="t form-control" id="lname">
+                    <div class="col-12 col-sm-6 mt-4 form-floating  ">
+                        <input type="text" asp-for="PtLastName" placeholder="Last Name" class="PatientInputs form-control" id="lname">
                         <label for="lname" class="ms-2">Last Name</label>
                     </div>
                 </div>
                 <div class="row ">
-                    <div class="col-11 col-sm-6  mt-4 form-floating">
-                        <input type="date" asp-for="PtDOB" placeholder="Date Of Birth" class="t form-control" id="DOB">
+                    <div class="col-12 col-sm-6  mt-4 form-floating">
+                        <input type="date" asp-for="PtDOB" placeholder="Date Of Birth" class="PatientInputs form-control" id="DOB">
                         <label for="DOB" class="ms-2">Date Of Birth</label>
                     </div>
                 </div>
@@ -210,13 +210,13 @@
                     <h5 for="">Patient Contact Information</h5>
                 </div>
                 <div class="row ">
-                    <div class="col-11 col-sm-6 mt-4">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating">
-                            <input type="email" asp-for="PtEmail" placeholder="Email" class=" t form-control" id="emailfloat">
+                            <input type="email" asp-for="PtEmail" placeholder="Email" class="PatientInputs form-control" id="emailfloat">
                             <label for="emailfloat">Email</label>
                         </div>
                     </div>
-                    <div class="col-11 col-sm-6 mt-4 ">
+                    <div class="col-12 col-sm-6 mt-4 ">
                         <div class="form-floating ">
                             <input id="patient-phone" asp-for="PtPhoneNo" class="form-control" type="tel" name="phone1"></input>
                         </div>
@@ -227,9 +227,9 @@
                     <h5>Patient Location</h5>
                 </div>
                 <div class="row ">
-                    <div class="col-11 col-sm-6 mt-4">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating">
-                            <input type="text" asp-for="PtRoomSuite" class="t  form-control" id="floatingRoom" placeholder="Room">
+                            <input type="text" asp-for="PtRoomSuite" class="PatientInputs form-control" id="floatingRoom" placeholder="Room">
                             <label for="floatingRoom">Room # / Suite (Optional)</label>
                         </div>
                     </div>
