--- a/HalloDoc Project/Views/Guest/create_patient_request.cshtml
+++ b/HalloDoc Project/Views/Guest/create_patient_request.cshtml
@@ -11,103 +11,18 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="~/css/PatientRequestCSS.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
             integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous">
     </script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
-    <style>
-        .validation {
-            font-size: small;
-            color: red;
-            font-weight:500;
-        }
 
-        * {
-            font-family: Poppins;
-        }
-
-        .patient-upload {
-            border-radius: 5px;
-            border: 1px solid #d1d1d1;
-            display: flex;
-        }
-
-        .btn-online-info:hover {
-            color: white;
-        }
-
-        .file-upload {
-            /* display: block; */
-            margin: 0 auto;
-            /* / color: #fff; / */
-        }
-
-        #fileLoader {
-            position: absolute;
-            left: -9999px;
-        }
-
-        label[for="fileLoader"] {
-            padding: 0.5em;
-            background: #01bce9;
-            cursor: pointer;
-            /* / float:left; / */
-            color: #ffffff;
-            float: right;
-        }
-
-        #filename {
-            padding: 0.5em;
-            /* / width:93%; / */
-            /* / white-space: nowrap; / */
-            /* / overflow:hidden; / */
-            /* / background:#739BAE; / */
-            float: left;
-            /* / flex-grow: 1; / */
-        }
-
-        .t:focus {
-            box-shadow: none;
-            border: 2px solid #10bce9;
-        }
-
-        .t:focus-within + label {
-            color: #10bce9 !important;
-        }
-
-        .iti {
-            position: relative;
-            height: 100%;
-            width: 100%;
-            display: inline-block;
-        }
-
-        .iti--allow-dropdown input, .iti--allow-dropdown input[type=text], .iti--allow-dropdown input[type=tel], .iti--separate-dial-code input, .iti--separate-dial-code input[type=text], .iti--separate-dial-code input[type=tel] {
-            padding-right: 6px;
-            padding-left: 52px;
-            margin-left: 0;
-            height: 59px;
-        }
-
-        .iti__country-list {
-            z-index: 5;
-        }
-
-        .btn-online-info:hover 
-        {
-            color:white;
-        }
-
-        .shadow-lg {
-            box-shadow: 0px 0px 10px white;
-        }
-    </style>
 </head>
 
 <body>
@@ -122,34 +37,34 @@
     </div>
     <br>
     <div class="row mb-4 d-flex justify-content-center ">
-        <div class="col-11 col-md-10 col-lg-9 shadow-lg">
+        <div class="col-11 col-sm-10 col-md-9 col-lg-8 shadow-lg">
             <form method="post" enctype="multipart/form-data">
                 <div class="row ">
                     <h5 for="" class="mt-4">Patient Information</h5>
                 </div>
                 <div class="row mt-4">
                     <div class="col form-floating ">
-                        <textarea asp-for="Symptoms" class="t form-control" id="forfloatingtextarea"
+                        <textarea asp-for="Symptoms" class="PatientInputs form-control" id="forfloatingtextarea"
                                   placeholder="Enter Brief Details Of Symptoms(Optional)" style="height: 15vh;" cols="20"
                                   rows="5"></textarea>
                         <label for="forfloatingtextarea" class="ms-2">Enter Brief Details Of Symptoms(Optional)</label>
-                        
+
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-11 mt-4 col-sm-6 form-floating ">
-                        <input type="text" asp-for="FirstName" placeholder="First Name" class="t  form-control" id="fname">
+                    <div class="col-12 mt-4 col-sm-6 form-floating ">
+                        <input type="text" asp-for="FirstName" placeholder="First Name" class="PatientInputs form-control" id="fname">
                         <label for="fname" class="ms-2">First Name</label>
                         <span class="validation" asp-validation-for="FirstName"></span>
                     </div>
-                    <div class="col-11 col-sm-6 mt-4 form-floating  ">
-                        <input type="text" asp-for="LastName" placeholder="Last Name" class="t form-control" id="lname">
+                    <div class="col-12 col-sm-6 mt-4 form-floating  ">
+                        <input type="text" asp-for="LastName" placeholder="Last Name" class="PatientInputs form-control" id="lname">
                         <label for="lname" class="ms-2">Last Name</label>
                     </div>
                 </div>
                 <div class="row ">
-                    <div class="col-11 col-sm-6  mt-4 form-floating">
-                        <input type="date" asp-for="DateOfBirth" placeholder="Date Of Birth" class="t form-control" id="DOB">
+                    <div class="col-12 col-sm-6  mt-4 form-floating">
+                        <input type="date" max="@DateTime.Now.ToString("yyyy-MM-dd")" min="@DateTime.Now.AddYears(-100).ToString()" asp-for="DateOfBirth" placeholder="Date Of Birth" class="PatientInputs form-control" id="DOB">
                         <label for="DOB" class="ms-2">Date Of Birth</label>
                         <span class="validation" asp-validation-for="DateOfBirth"></span>
                     </div>
@@ -158,18 +73,18 @@
                     <h5 for="">Patient Contact Information</h5>
                 </div>
                 <div class="row ">
-                    <div class="col-11 col-sm-6 mt-4">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating">
-                            <input type="email" asp-for="Email" placeholder="Email" class=" t form-control" id="emailfloat">
+                            <input type="email" asp-for="Email" placeholder="Email" class="PatientInputs form-control" id="emailfloat">
                             <label for="emailfloat">Email</label>
                             <span class="validation" asp-validation-for="Email"></span>
                         </div>
                     </div>
-                    <div class="col-11 col-sm-6 mt-4 ">
+                    <div class="col-12 col-sm-6 mt-4 ">
 
 
                         <div class="form-floating ">
-                            <input id="patient-phone" asp-for="PhoneNo" class="form-control" type="tel" name="phone1" />
+                            <input id="patient-phone" asp-for="PhoneNo" class="PatientInputs form-control" type="tel" name="phone1" />
                             <span class="validation text-danger" asp-validation-for="PhoneNo"></span>
                         </div>
 
@@ -178,16 +93,16 @@
                 <div class="row " id="hiddendiv" style="display:none">
                     <br />
 
-                    <div class="col-11 col-sm-6 mt-4">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating">
-                            <input type="password" asp-for="Password" placeholder="Email" class=" t form-control" id="passwordfloat">
+                            <input type="password" asp-for="Password" placeholder="Password" class="PatientInputs form-control" id="passwordfloat">
                             <label for="passwordfloat">Enter Password</label>
                             <span class="validation" asp-validation-for="Password" class="text-danger"></span>
                         </div>
                     </div>
-                    <div class="col-11 col-sm-6 mt-4 ">
+                    <div class="col-12 col-sm-6 mt-4 ">
                         <div class="form-floating ">
-                            <input id="confirmpass" asp-for="ConfirmPass" class="form-control" type="password" />
+                            <input id="confirmpass" asp-for="ConfirmPass" placeholder="Confirm Password" class="PatientInputs form-control" type="password" />
                             <label for="confirmpass">Confirm Password</label>
                             <span class="validation" asp-validation-for="ConfirmPass" class=""></span>
                         </div>
@@ -197,17 +112,17 @@
                     <h5>Patient Location</h5>
                 </div>
                 <div class="row ">
-                    <div class="col-11 col-sm-6 mt-4">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating">
-                            <input type="text" asp-for="Street" class="t form-control" id="floatingEmail" placeholder="Street ">
+                            <input type="text" asp-for="Street" class="PatientInputs form-control" id="floatingEmail" placeholder="Street ">
                             <label for="floatingEmail">Street</label>
                             <span class="validation" asp-validation-for="Street"></span>
                         </div>
 
                     </div>
-                    <div class="col-11 col-sm-6 mt-4">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating">
-                            <input type="text" asp-for="City" class="t  form-control" id="floatingCity" placeholder="City">
+                            <input type="text" asp-for="City" class="PatientInputs form-control" id="floatingCity" placeholder="City">
                             <label for="floatingCity">City</label>
                             <span class="validation" asp-validation-for="City"></span>
                         </div>
@@ -215,26 +130,26 @@
                 </div>
 
                 <div class="row ">
-                    <div class="col-11 col-sm-6 mt-4">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating">
-                            <input type="text" asp-for="State" class="t  form-control" id="floatingState" placeholder="state">
+                            <input type="text" asp-for="State" class="PatientInputs form-control" id="floatingState" placeholder="state">
                             <label for="floatingState">State</label>
                             <span class="validation" asp-validation-for="State"></span>
 
                         </div>
                     </div>
-                    <div class="col-11 col-sm-6 mt-4">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating">
-                            <input type="number" asp-for="ZipCode" class="t  form-control" id="floatingZip" placeholder="zip">
+                            <input type="number" asp-for="ZipCode" class="PatientInputs form-control" id="floatingZip" placeholder="zip">
                             <label for="floatingZip">Zip Code</label>
                             <span class="validation" asp-validation-for="ZipCode"></span>
                         </div>
                     </div>
                 </div>
                 <div class="row ">
-                    <div class="col-11 col-sm-6 mt-4">
+                    <div class="col-12 col-sm-6 mt-4">
                         <div class="form-floating">
-                            <input type="text" asp-for="RoomSuite" class="t  form-control" id="floatingRoom" placeholder="Room">
+                            <input type="text" asp-for="RoomSuite" class="PatientInputs form-control" id="floatingRoom" placeholder="Room">
                             <label for="floatingRoom">Room # / Suite (Optional)</label>
                             <span class="validation" asp-validation-for="RoomSuite"></span>
                         </div>
@@ -243,17 +158,17 @@
                 <div class="row mt-4">
                     <h5>(Optional) Upload Photo or Document</h5>
                 </div>
-                <div class="row px-3">
+                <div class="row ">
 
                     <div class="mb-3">
 
-                        <input asp-for="File" class="form-control" type="file" id="file_input_id" multiple style="opacity:0;height:0;">
+                        <input asp-for="File" class=" col-12 form-control" type="file" id="file_input_id" multiple style="opacity:0;height:0;">
 
-                        <div class="input-group mb-3">
-                            <input type="text" id='text_input_id' class="form-control" placeholder="Select File"
+                        <div class="input-group">
+                            <input type="text" id="text_input_id" class="py-2 col-12 form-control" placeholder="Select File"
                                    style="caret-color: transparent" autocomplete="off" />
                             <span class="input-group-text" id="text_input_span_id " style="background-color: #10bce9;">
-                                <label for="file_input_id" class="ms-1 text-white">Upload</label>
+                                <label for="file_input_id" class=" py-2 ms-1 text-white">Upload</label>
                             </span>
 
                         </div>
