--- a/HalloDoc Project/Views/Guest/patient_submit_request_screen.cshtml
+++ b/HalloDoc Project/Views/Guest/patient_submit_request_screen.cshtml
@@ -14,123 +14,10 @@
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="~/css/SubmitRequestScreenCSS.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <script src="~/js/script.js"></script>
-    <style>
-        *{
-            font-family:Poppins;
-        }
-        [data-bs-theme="dark"] .ft{
-            color: white;
-        }
-
-        /* [data-bs-theme="dark"] .tr-info th {
-            color: white;
-            background-color: #3a3b3c;
-        } */
-        .para {
-            font-size: 250%;
-            text-align: center;
-        }
-
-        #opt1 {
-            font-weight: bold;
-            border-width: 3px;
-            border-color: #4367d3;
-            background-color: #e8eaf1;
-            color: #4367d3;
-        }
-
-            #opt1:hover {
-                font-weight: bold;
-                border-width: 3px;
-                background-color: #4367d3;
-                color: white;
-            }
-
-        #opt2 {
-            font-weight: bold;
-            border-width: 3px;
-            border-color: #00adef;
-            background-color: #e5f3f8;
-            color: #00adef;
-        }
-
-            #opt2:hover {
-                font-weight: bold;
-                border-width: 3px;
-                background-color: #00adef;
-                color: white;
-            }
-
-        #opt3 {
-            font-weight: bold;
-            border-width: 3px;
-            border-color: #228b22;
-            background-color: #e8f0e8;
-            color: #228b22;
-        }
-
-            #opt3:hover {
-                font-weight: bold;
-                border-width: 3px;
-                background-color: #228b22;
-                color: white;
-            }
-
-        #opt4 {
-            font-weight: bold;
-            border-width: 3px;
-            border-color: #d90f81;
-            background-color: #f6e6ef;
-            color: #d90f81;
-        }
-
-            #opt4:hover {
-                font-weight: bold;
-                border-width: 3px;
-                background-color: #d90f81;
-                color: white;
-            }
-
-        .foot {
-            position: absolute;
-            bottom: 15px;
-        }
-
-        [data-bs-theme = 'light'] ft {
-            color: black;
-            text-decoration: none;
-        }
-
-        [data-bs-theme ='dark'] ft {
-            color: white;
-            text-decoration: none;
-        }
-
-
-        span {
-            font-size: 25px;
-        }
-
-        #back-btn:hover {
-            color: white;
-        }
-
-        footer a {
-            color: black;
-            text-decoration: none;
-        }
-
-            footer a:hover {
-                color: black;
-                text-decoration: none;
-            }
-
-    </style>
-    
-</head>
-
+ </head>
 <body >
     <nav class="navbar navigationbar shadow rounded w-100">
         <div class="w-100 align-items-center" style="display:contents;">
@@ -161,8 +48,8 @@
     </div>
 
     <p class="para">I am a...</p>
-    <div class=" row  container-fluid justify-content-center ">
-        <div class="col-md-5 col-lg-3 col-10">
+    <div class="row container-fluid justify-content-center">
+        <div class="col-md-6 col-lg-4 col-sm-8 col-10">
             <div class="row border m-3 rounded" id="option1-div">
                 <a asp-controller="Guest" asp-action="create_patient_request" class="btn w-100" id="opt1" type="button">
                     <span id="options">Patient</span>
@@ -186,9 +73,9 @@
         </div>
 
         <footer class="foot justify-content-center .align-items-center d-flex">
-            <a href="#" class="anchor text-dark mt-2 ft">Terms & Conditions </a>
+            <a asp-controller="Guest" asp-action="TermsAndConditions" class="anchor text-dark mt-2 ft">Terms & Conditions </a>
             <span class="mx-3 mt-1 text-dark ft">|</span>
-            <a href="##" class="anchor text-dark mt-2 ft">Privacy Policy</a>
+            <a asp-controller="Guest" asp-action="PrivacyPolicy" class="anchor text-dark mt-2 ft">Privacy Policy</a>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
