--- a/HalloDoc Project/Views/Guest/submit_request_page.cshtml
+++ b/HalloDoc Project/Views/Guest/submit_request_page.cshtml
@@ -33,21 +33,21 @@
     <div class="">
         <div class="bg"></div>
         <div class=" d-flex flex-column justify-content-center align-items-center" style="height:83vh">
-            <div class="d-block d-md-none col-6 ">
+            <div class="d-block d-md-none  ">
                 <img src="/SRS Screen Shorts/HalloDoc LOGO.png" class="img-fluid" style="min-width:200px" alt="">
             </div>
 
-            <div class="w-50 col-4 border d-flex align-items-center  m-2 ">
+            <div class="col-md-6 col-lg-4 col-sm-8 col-10 border d-flex align-items-center  m-2 ">
                 <button onclick="window.location.href='/Guest/patient_submit_request_screen'" class="btno1 py-3 rounded w-100 ">
                     SUBMIT A REQUEST
                 </button>
             </div>
-            <div class=" w-50 col-4 border rounded m-2 ">
+            <div class="col-md-6 col-lg-4 col-sm-8 col-10 border rounded m-2 ">
                 <button onclick="window.location.href = '/Guest/login_page';" class=" btno2 py-3 w-100 px- rounded">
                     REGISTERED PATIENTS
                 </button>
             </div>
-            <div class=" w-50 col-4 border rounded m-2 ">
+            <div class="col-md-6 col-lg-4 col-sm-8 col-10 border rounded m-2 ">
                 <a asp-controller="Admin" asp-action="AdminDashboard" class=" text-light btn btno3 py-3 w-100 px- rounded">
                     ADMIN DASHBOARD
                 </a>
